cabal-version:       2.4
name:                utreexo
version:             0.1.0
synopsis:            An implementation of the Utreexo accumulator
homepage:            https://github.com/GambolingPangolin/utreexo
license:             ISC
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Crypto.Utreexo
  build-depends:
    base                                >=4.12              && <4.13
